# mcp-apps-base-chatbot

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: __init__.py  events.py  extensions.py  messages.py  sessions.py
backend/app/routes/: chat.py  extensions.py  mcp_proxy.py  refine.py  sessions.py
backend/app/services/: agent.py  llm_service.py  mcp_manager.py  session_manager.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: chat.ts  client.ts  extensions.ts  sessions.ts
frontend/src/components/: AssistantMessage.tsx  ChatInput.tsx  ChatView.tsx  ExtensionManager.tsx  McpAppRenderer.tsx  MessageList.tsx  RemoteDomRenderer.tsx  SessionSidebar.tsx  ToolCallDisplay.tsx  UserMessage.tsx
frontend/src/config/: mcpServers.ts
frontend/src/hooks/: useChatStream.ts  useSessionManager.ts
frontend/src/styles/: index.css
frontend/src/types/: events.ts  extension.ts  message.ts  session.ts
sample-mcp-server/: README.md  server.py
text-editor-mcp-server/: README.md  server.py
weather-mcp-server/: .env.example  README.md  server.py
